improved search-updater logic by: * not publishing a PolicyEvent, instead publish a PolicyTag and consume in PolicyModificationForwarder to detect changes to a policy * preserving the updateReason in Metadata build in EnforcedThingMapper * adding better log statements to find out problems
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>